--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,6 @@ p {
   top: -6em;
   position: relative;
   margin: 0 1em;
-  padding-bottom: 5em;
 
   display: flex;
   flex-direction: column;
@@ -92,7 +91,7 @@ p {
   min-width: 320px;
   padding: 1em;
   width: 100%;
-  z-index: 99;
+  z-index: 39;
   background-color: var(--dark-cyan-clr);
 }
 
@@ -190,6 +189,55 @@ p {
 
 .bookmark-title {
   display: none;
+}
+
+/* Back Pledge CSS */
+.back-container {
+  position: absolute;
+  top: 0;
+  padding: 5em 0;
+  background-color: hsl(0, 0%, 0%, 0.7);
+  z-index: 20;
+}
+
+.back-pledge {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 1em;
+  padding: 1.5em;
+  margin: 1em;
+  z-index: 50;
+}
+
+.back-close {
+  position: absolute;
+  margin-top: 10px;
+  right: 45px;
+}
+
+.back-items {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.back-header {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+
+.pledge-item input[type="radio"] {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.pledge-item label {
+  margin-left: 10px;
+  color: var(--black-clr);
+  font-weight: var(--font-bold-700);
 }
 
 /* Progress CSS */
