--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,6 @@ p {
 
 /* Hero CSS */
 .hero-container {
-  margin-top: 4em;
   height: 40vh;
 
   background-image: url("/src/assets/images/image-hero-mobile.jpg");
@@ -84,6 +83,7 @@ p {
 
 /* Mobile Navigation */
 .nav-header {
+  background-color: hsl(0, 0%, 0%, 0.3);
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -91,9 +91,8 @@ p {
   justify-content: space-between;
   min-width: 320px;
   padding: 1em;
-  width: 100%;
   z-index: 39;
-  background-color: var(--dark-cyan-clr);
+  width: 100%;
 }
 
 .nav-header h2 {
@@ -101,8 +100,8 @@ p {
 }
 
 .mobile-nav-toggle {
-  position: fixed;
-  right: 2em;
+  position: absolute;
+  right: 3em;
   cursor: pointer;
   height: 24px;
   width: 24px;
@@ -123,7 +122,7 @@ p {
   font-weight: var(--font-bold-700);
   color: var(--black-clr);
   background-color: var(--white-clr);
-  border: 5px solid var(--dark-cyan-clr);
+  border: 3px solid var(--dark-cyan-clr);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,8 +139,13 @@ p {
 
 .nav-item {
   padding: 0.5em 1em;
-  border-bottom: 2px solid var(--dark-cyan-clr);
+  border-bottom: 3px solid var(--dark-cyan-clr);
   cursor: pointer;
+}
+
+.nav-item:hover {
+  color: var(--cyan-clr);
+  border-bottom: 3px solid var(--black-clr);
 }
 
 /* Intro CSS */
@@ -433,7 +437,7 @@ p {
   margin: 1em;
   border-radius: 1em;
   width: 100%;
-  max-width: 700px;
+  max-width: 300px;
 }
 
 @media screen and (min-width: 728px) {
@@ -455,7 +459,6 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
 
-    margin-top: 4em;
     width: 100%;
     height: 50vh;
   }
@@ -482,6 +485,7 @@ p {
     margin: 0;
     gap: 0;
     color: var(--white-clr);
+    border: none;
 
     width: 100%;
     background-color: initial;
@@ -495,6 +499,10 @@ p {
 
   .nav-item {
     border-bottom: none;
+  }
+
+  .nav-item:hover {
+    color: var(--cyan-clr);
   }
 
   /* Intro CSS */
